force-app/main/default/objects/CopyHistory__c/CopyHistory__c.object-meta.xml
<CustomObject>
    <label>CopyHistory</label>
    <nameField>
        <label>CopyHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CopyHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>