force-app/main/default/objects/CopyHistory__c/fields/AccessionNo__c.field-meta.xml
<CustomField>
    <fullName>AccessionNo__c</fullName>
    <label>AccessionNo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>