force-app/main/default/objects/CopyHistory__c/fields/CatNo1__c.field-meta.xml
<CustomField>
    <fullName>CatNo1__c</fullName>
    <label>CatNo1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>