force-app/main/default/objects/CopyHistory__c/fields/FineAmt__c.field-meta.xml
<CustomField>
    <fullName>FineAmt__c</fullName>
    <label>FineAmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>