force-app/main/default/objects/CopyHistory__c/fields/StudentID__c.field-meta.xml
<CustomField>
    <fullName>StudentID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StudentID</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>CopyHistory</relationshipLabel>
    <relationshipName>CopyHistory</relationshipName>
    <type>Lookup</type>
</CustomField>