force-app/main/default/objects/CopyHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccessionNo__c</columns>
    <columns>Issued_Date__c</columns>
    <columns>StudentID__c</columns>
    <columns>CatNo1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>